# models/antecedente_psicologico.go
@@ -7,6 +7,7 @@ import (
 	"strings"
 
 	"github.com/astaxie/beego/orm"
+	"github.com/udistrital/utils_oas/time_bogota"
 )
 
 type AntecedentePsicologico struct {
@@ -15,6 +16,8 @@ type AntecedentePsicologico struct {
 	TipoAntecedentePsicologicoId *TipoAntecedentePsicologico `orm:"column(tipo_antecedente_psicologico_id);rel(fk)"`
 	PasadoSomatico               string                      `orm:"column(pasado_somatico)"`
 	ActualSomatico               string                      `orm:"column(actual_somatico)"`
+	FechaCreacion     					 string  										 `orm:"column(fecha_creacion);null"`
+	FechaModificacion 					 string  										 `orm:"column(fecha_modificacion);null"`
 }
 
 func (t *AntecedentePsicologico) TableName() string {
@@ -28,6 +31,8 @@ func init() {
 // AddAntecedentePsicologico insert a new AntecedentePsicologico into database and returns
 // last inserted Id on success.
 func AddAntecedentePsicologico(m *AntecedentePsicologico) (id int64, err error) {
+	m.FechaCreacion = time_bogota.TiempoBogotaFormato()
+	m.FechaModificacion = time_bogota.TiempoBogotaFormato()
 	o := orm.NewOrm()
 	id, err = o.Insert(m)
 	return
@@ -127,10 +132,11 @@ func GetAllAntecedentePsicologico(query map[string]string, fields []string, sort
 func UpdateAntecedentePsicologicoById(m *AntecedentePsicologico) (err error) {
 	o := orm.NewOrm()
 	v := AntecedentePsicologico{Id: m.Id}
+	m.FechaModificacion = time_bogota.TiempoBogotaFormato()
 	// ascertain id exists in the database
 	if err = o.Read(&v); err == nil {
 		var num int64
-		if num, err = o.Update(m); err == nil {
+		if num, err = o.Update(m, "HistoriaClinicaId", "TipoAntecedentePsicologicoId", "PasadoSomatico", "ActualSomatico", "FechaModificacion"); err == nil {
 			fmt.Println("Number of records updated in database:", num)
 		}
 	}
