# models/datos_emergencia.go
@@ -7,6 +7,7 @@ import (
 	"strings"
 
 	"github.com/astaxie/beego/orm"
+	"github.com/udistrital/utils_oas/time_bogota"
 )
 
 type DatosEmergencia struct {
@@ -16,6 +17,8 @@ type DatosEmergencia struct {
 	Telefono          string           `orm:"column(telefono)"`
 	Direccion         string           `orm:"column(direccion)"`
 	HistoriaClinicaId *HistoriaClinica `orm:"column(historia_clinica_id);rel(fk)"`
+	FechaCreacion     string  				 `orm:"column(fecha_creacion);null"`
+	FechaModificacion string  				 `orm:"column(fecha_modificacion);null"`
 }
 
 func (t *DatosEmergencia) TableName() string {
@@ -29,6 +32,8 @@ func init() {
 // AddDatosEmergencia insert a new DatosEmergencia into database and returns
 // last inserted Id on success.
 func AddDatosEmergencia(m *DatosEmergencia) (id int64, err error) {
+	m.FechaCreacion = time_bogota.TiempoBogotaFormato()
+	m.FechaModificacion = time_bogota.TiempoBogotaFormato()
 	o := orm.NewOrm()
 	id, err = o.Insert(m)
 	return
@@ -128,10 +133,11 @@ func GetAllDatosEmergencia(query map[string]string, fields []string, sortby []st
 func UpdateDatosEmergenciaById(m *DatosEmergencia) (err error) {
 	o := orm.NewOrm()
 	v := DatosEmergencia{Id: m.Id}
+	m.FechaModificacion = time_bogota.TiempoBogotaFormato()
 	// ascertain id exists in the database
 	if err = o.Read(&v); err == nil {
 		var num int64
-		if num, err = o.Update(m); err == nil {
+		if num, err = o.Update(m, "Nombre", "Parentesco", "Telefono", "Direccion", "HistoriaClinicaId", "FechaModificacion"); err == nil {
 			fmt.Println("Number of records updated in database:", num)
 		}
 	}
