# models/tipo_antecedente.go
@@ -11,14 +11,14 @@ import (
 )
 
 type TipoAntecedente struct {
-	Id                int     `orm:"column(id);pk;auto"`
-	Nombre            string  `orm:"column(nombre)"`
-	Descripcion       string  `orm:"column(descripcion);null"`
-	NumeroOrden       float64 `orm:"column(numero_orden);null"`
-	CodigoAbreviacion string  `orm:"column(codigo_abreviacion);null"`
-	Activo            bool    `orm:"column(activo)"`
-	FechaCreacion     string  `orm:"column(fecha_creacion);null"`
-	FechaModificacion string  `orm:"column(fecha_modificacion);null"`
+	Id                int       `orm:"column(id);pk;auto"`
+	Nombre            string    `orm:"column(nombre)"`
+	Descripcion       string    `orm:"column(descripcion);null"`
+	NumeroOrden       float64   `orm:"column(numero_orden);null"`
+	CodigoAbreviacion string    `orm:"column(codigo_abreviacion);null"`
+	Activo            bool      `orm:"column(activo)"`
+	FechaCreacion     string  	`orm:"column(fecha_creacion);null"`
+	FechaModificacion string  	`orm:"column(fecha_modificacion);null"`
 }
 
 func (t *TipoAntecedente) TableName() string {
@@ -137,7 +137,7 @@ func UpdateTipoAntecedenteById(m *TipoAntecedente) (err error) {
 	// ascertain id exists in the database
 	if err = o.Read(&v); err == nil {
 		var num int64
-		if num, err = o.Update(m); err == nil {
+		if num, err = o.Update(m, "Nombre", "Descripcion", "NumeroOrden", "CodigoAbreviacion", "Activo", "FechaModificacion"); err == nil {
 			fmt.Println("Number of records updated in database:", num)
 		}
 	}
